--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<p>Gna Hanny M Touré</p>
+<p>Gna Hanny Moussa Touré</p>
 <p>Missabougou</p>
 <p>Tel.: 93704801</p>
 <p>Cell.: 93704801</p>
@@ -22,7 +22,19 @@
 	<div class="brd"; align="center">FORMATION</div>
 </p>
 <p>
-	<span class="left">2022-2021 </span> <div class="center">licence1</div>
+	<span class="left">2024-2025 </span> <div class="center">master1</div>
+    <span class="left" style="hidden:true;">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </span> <div class="center">SUP Management</div>
+</p>
+<p>
+	<span class="left">2023-2024 </span> <div class="center">licence3</div>
+    <span class="left" style="hidden:true;">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </span> <div class="center">SUP Management</div>
+</p>
+<p>
+	<span class="left">2022-2023 </span> <div class="center">licence2</div>
+    <span class="left" style="hidden:true;">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </span> <div class="center">SUP Management</div>
+</p>
+<p>
+	<span class="left">2021-2022 </span> <div class="center">licence1</div>
     <span class="left" style="hidden:true;">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </span> <div class="center">SUP Management</div>
 </p>
 <p>
@@ -40,6 +52,26 @@
 		<li>html5</li>
 		<li>css3</li>
 		<li>git/github</li>
+		<li>bootstrap4</li>
+		<li>bootstrap5</li>
+		<li>ciscoPacketTracer</li>
+		<li>Langages de programmation : Python, R, SQL</li>
+		<li>Analyse de données : Pandas, Numpy, Matplotlib, Seaborn
+
+</li>
+		<li>Machine Learning : scikit-learn, XGBoost, KMeans, Random Forest
+
+</li>
+		<li>Deep Learning : Keras, TensorFlow, PyTorch</li>
+		<li>Bases de données : PostgreSQL, MySQL, NoSQL (MongoDB)
+
+</li>
+		<li>Big Data : Apache Spark, Hadoop (niveau débutant)</li>
+		<li>Visualisation de données : Tableau</li>
+		<li>Déploiement de modèles : Streamlit, Flask, FastAPI</li>
+		<li>Gestion de projet : méthodes Agile</li>
+		
+		
 	</ul>
 <p>
 	<div class="brd"; align="center">DIVERS</div>
